--- a/index.html
+++ b/index.html
@@ -19,7 +19,29 @@
     </head>
     <body>
         <main class="container" ng-app = "MoviesApp" ng-controller = "MoviesController">
-            <h1>Movies from 2014</h1>
+            <h1>Movies from 2014</h1>  
+            <table class = "table">
+                <tr>
+                    <th>Rank</th>
+                    <th>Title</th>
+                    <th>Release Date</th>
+                    <th>Studio</th>
+                    <th>Genre</th>
+                    <th>Rating</th>
+                    <th>Gross Sales</th>
+                    <th>Tickets Sold</th>
+                </tr>
+                <tr ng-repeat="movie in movies">
+                    <td>{{movie.rank}}</td>
+                    <td>{{movie.title}}</td>
+                    <td>{{movie.releaseDate | date : 'shortDate'}}</td>
+                    <td>{{movie.studio}}</td>
+                    <td>{{movie.genre}}</td>
+                    <td>{{movie.rating}}</td>
+                    <td>{{movie.grossSales}}</td>
+                    <td>{{movie.ticketsSold}}</td>
+                </tr>
+            </table>
 
         </main>
 
